# dfir-cli

./: README.md  dfir_cli.py  pyproject.toml
