[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dfir-cli"
version = "1.0.0"
description = "DFIR toolkit — IOC extraction, encoding, file analysis, from the command line"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
dfir = "dfir_cli:cli"

[tool.setuptools]
py-modules = ["dfir_cli"]
